// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should change dot position when using offset prop > -2px 1`] = `""`;

exports[`should change dot position when using offset prop > 4px 1`] = `""`;

exports[`should render content slot correctly 1`] = `
"<view class=\\"cub-badge\\">
  <view class=\\"cub-badge__icon\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>Custom Content<view class=\\"cub-badge__content cub-badge__content--sup\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
</view>"
`;

exports[`should render nothing when content is empty string 1`] = `
"<view class=\\"cub-badge\\">
  <view class=\\"cub-badge__icon\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
  <view class=\\"cub-badge__content cub-badge__content--sup\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
</view>"
`;

exports[`should render nothing when content is undefined 1`] = `
"<view class=\\"cub-badge\\">
  <view class=\\"cub-badge__icon\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
  <view class=\\"cub-badge__content cub-badge__content--sup\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
</view>"
`;

exports[`should render nothing when content is zero 1`] = `
"<view class=\\"cub-badge\\">
  <view class=\\"cub-badge__icon\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\"></view>
  <view class=\\"cub-badge__content cub-badge__content--sup\\" style=\\"top: 0px; right: 0px; z-index: 9; display: none;\\">0</view>
</view>"
`;
